# five-sigma-assessment

./: README.md  problem_a.py  problem_a_test.py  problem_b.py  problem_b_test.py  pyproject.toml
problem_a/: main_test.py
problem_b/: board.py  board_test.py  butterfly.py  main.py  tile.py  utils.py
problem_b/input/: example_2.txt
problem_b_inputs/: example_1.txt
problem_c/: df_to_rich.py  main.py  main_test.py
problem_c/input/: .~lock.data.xlsx#
