[tool.poetry]
name = "five-sigma"
version = "0.1.0"
description = ""
authors = ["Sid Ganesan <siddha.ganesan@gmail.com>"]
readme = "README.md"
packages = [{include = "five_sigma"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.3"
typer = "^0.7.0"
pandas = "^2.0.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
